Fix year-select__list left offset: 0 on mobile, -15px on desktop

--- a/src/css/Common/toc.css
+++ b/src/css/Common/toc.css
@@ -31,7 +31,7 @@
   display: none;
   position: absolute;
   top: 0;
-  left: -15px;
+  left: 0;
   margin: 0;
   padding: 0.25rem 0;
   list-style: none;
@@ -68,6 +68,12 @@
 .year-select .year-select__option:hover,
 .year-select .year-select__option.is-focused {
   background: #f0f0f0;
+}
+
+@media (min-width: 768px) {
+  .year-select__list {
+    left: -15px;
+  }
 }
 
 .publications-list {
